--- a/node2/config/config.toml
+++ b/node2/config/config.toml
@@ -1,17 +1,27 @@
 # This is a TOML config file.
 # For more information, see https://github.com/toml-lang/toml
 
-addr_book_strict = true
+# addr_book_strict = true
 
-proxy_app = "tcp://127.0.0.1:26658"
-moniker = "penguin"
+proxy_app = "tcp://abci2:46658"
+
+moniker = "node2"
 fast_sync = true
 db_backend = "leveldb"
 log_level = "state:info,*:error"
 
 [rpc]
-laddr = "tcp://0.0.0.0:26657"
+laddr = "tcp://0.0.0.0:46657"
 
 [p2p]
-laddr = "tcp://0.0.0.0:26656"
-seeds = ""
+laddr = "tcp://0.0.0.0:46656"
+
+# Comma separated list of nodes to keep persistent connections to
+# Do not add private peers to this list if you don't want them advertised
+# Get ID by using command: tendermint --home ./ show_node_id
+persistent_peers = "e22d32468d18766d14d43eb4bf65f97930637827@node1:46656,b52acf6505eecab38b9cb637258355f3bfe09298@node2:46656,596da16099a528e93871f6ed245825f0fa2d16d4@node3:46656,946676ec3a94ba80268b5256a3b9270f5258390c@node4:46656"
+
+##### consensus configuration options #####
+[consensus]
+# EmptyBlocks mode and possible interval between empty blocks in seconds
+create_empty_blocks = false
