--- a/nodes-kubernetes/node2/config/config.toml
+++ b/nodes-kubernetes/node2/config/config.toml
@@ -3,9 +3,9 @@
 
 # addr_book_strict = true
 
-proxy_app = "tcp://abci1:46658"
+proxy_app = "tcp://localhost:46658"
 
-moniker = "node1"
+moniker = "node2"
 fast_sync = true
 db_backend = "leveldb"
 log_level = "state:info,*:error"
@@ -20,7 +20,6 @@ laddr = "tcp://0.0.0.0:46656"
 # Do not add private peers to this list if you don't want them advertised
 # Get ID by using command: tendermint --home ./ show_node_id
 persistent_peers = "e22d32468d18766d14d43eb4bf65f97930637827@node1:46656,b52acf6505eecab38b9cb637258355f3bfe09298@node2:46656,596da16099a528e93871f6ed245825f0fa2d16d4@node3:46656,946676ec3a94ba80268b5256a3b9270f5258390c@node4:46656"
-
 
 ##### consensus configuration options #####
 [consensus]
