--- a/nodes-kubernetes/kubernetes/kubernetes-2.yaml
+++ b/nodes-kubernetes/kubernetes/kubernetes-2.yaml
@@ -54,7 +54,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: tendermint
+  name: tendermint-2
   namespace: tendermint-test
 spec:
  selector:
