--- a/nodes-kubernetes/kubernetes/kubernetes-1.yaml
+++ b/nodes-kubernetes/kubernetes/kubernetes-1.yaml
@@ -28,7 +28,7 @@ spec:
           path: /Users/vjtc0n/Desktop/2018/Hyperledger/tendermint-starterkit/nodes-kubernetes/node1  
       containers:
       - name: validator-1
-        image: thanhtu/tendermint:latest
+        image: vjtc0n/tendermint:latest
         volumeMounts:
         - mountPath: /tendermint
           name: node-volume
@@ -44,7 +44,7 @@ spec:
           tendermint node \
               --home ./
       - name: abci1
-        image: thanhtu/abci:latest
+        image: vjtc0n/abci:latest
         command:
         - sh
         - "-c"
@@ -67,10 +67,6 @@ spec:
     protocol: TCP
     port: 46656
     targetPort: 46656     
-  - name: metricendpoint
-    protocol: TCP
-    port: 26660
-    targetPort: 26660
 
 ---
 apiVersion: v1
@@ -88,3 +84,8 @@ spec:
     port: 46657
     targetPort: 46657
     nodePort: 30657
+  - name: metricendpoint
+    protocol: TCP
+    port: 26660
+    targetPort: 26660
+    nodePort: 31000
