--- a/nodes-kubernetes/kubernetes/kubernetes-1.yaml
+++ b/nodes-kubernetes/kubernetes/kubernetes-1.yaml
@@ -49,7 +49,7 @@ spec:
         - sh
         - "-c"
         - |
-          abci-cli dummy \
+          abci-cli kvstore \
               --addr=tcp://localhost:46658
 
 ---
