--- a/nodes-kubernetes/node3/config/config.toml
+++ b/nodes-kubernetes/node3/config/config.toml
@@ -5,7 +5,7 @@
 
 # TCP or UNIX socket address of the ABCI application,
 # or the name of an ABCI application compiled in with the Tendermint binary
-proxy_app = "tcp://abci3:46658"
+proxy_app = "tcp://localhost:46658"
 
 # A custom human readable name for this node
 moniker = "node3"
