--- a/nodes-kubernetes/kubernetes/kubernetes-3.yaml
+++ b/nodes-kubernetes/kubernetes/kubernetes-3.yaml
@@ -49,7 +49,7 @@ spec:
         - "-c"
         - |
           abci-cli kvstore \
-              --addr=tcp://localhost:46658
+              --address=tcp://localhost:46658
 
 ---
 apiVersion: v1
