--- a/nodes-kubernetes/kubernetes/kubernetes-2.yaml
+++ b/nodes-kubernetes/kubernetes/kubernetes-2.yaml
@@ -67,3 +67,20 @@ spec:
     protocol: TCP
     port: 46656
     targetPort: 46656
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: tendermint-api-2
+  namespace: tendermint-test
+spec:
+ selector:
+   app: validator-2
+ type: NodePort
+ ports:
+  - name: endpoint
+    protocol: TCP
+    port: 46657
+    targetPort: 46657
+    nodePort: 31657
