--- a/nodes-kubernetes/node4/config/config.toml
+++ b/nodes-kubernetes/node4/config/config.toml
@@ -100,7 +100,7 @@ upnp = false
 addr_book_file = "config/addrbook.json"
 
 # Set true for strict address routability rules
-addr_book_strict = true
+addr_book_strict = false
 
 # Time to wait before flushing messages out on the connection, in ms
 flush_throttle_timeout = 100
@@ -161,7 +161,7 @@ timeout_commit = 1000
 skip_timeout_commit = false
 
 # EmptyBlocks mode and possible interval between empty blocks in seconds
-create_empty_blocks = true
+create_empty_blocks = false
 create_empty_blocks_interval = 0
 
 # Reactor sleep duration parameters are in milliseconds
